helm-charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  labels:
    app: react-ui
spec:
  replicas: 1
  selector:
      matchLabels:
        app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: react-ui
          image: gcr.io/pub-sap-sbx-poc-406406/react-ui:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      serviceAccount: ksa-terraform
