helm-charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-ui
  name: ui
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: react-ui
  type: NodePort
