helm-charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sap-poc-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: sap-poc-ip
    networking.gke.io/managed-certificates: sap-ui-poc-tls
spec:
  rules:
  - host: sap-poc.endpoints.pub-sap-sbx-poc-406406.cloud.goog
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: ui
            port:
              number: 8080
